--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -7,6 +7,6 @@
     <link href="./main.css" rel="stylesheet" />
   </head>
   <body>
-    
+    <div class="w-full h-dvh-full bg-blue-100"></div>
   </body>
 </html>
