--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -7,6 +7,16 @@
     <link href="./main.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="w-full h-dvh-full bg-blue-100"></div>
+    <div class="w-full h-dvh-full">
+
+      <div class="grid lg:grid-cols-4 bg-red-100 w-full h-full">
+        <div class="bg-blue-100 w-full"></div>
+        <div class="bg-blue-100 lg:col-span-3 grid grid-cols-1 w-full gap-2">
+          <div class="bg-green-100 w-full"></div>
+          <div class="bg-green-100 w-full"></div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
