--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -13,9 +13,9 @@
         <div class="bg-[#2C2C37] w-full h-full border-right-board"></div>
         <div class=" lg:col-span-3 w-full flex flex-row flex-wrap content-start">
           <div class="bg-[#2C2C37] flex-[0_0_100%] h-[10%] border-bottom-board"></div>
-          <div class="bg-[#21212C] flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
-            <div data-column="column" class="w-full"></div>
-            <div data-column="column"></div>
+          <div class="bg-[#21212C] flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap p-5 gap-5 overflow-scroll">
+            <div data-column="column" class="flex-[0_0_55%] h-full"></div>
+            <div data-column="new-column" class="flex-[0_0_55%] bg-[#2C2C37] cursor-pointer bg-opacity-70 hover:bg-opacity-100 h-full"></div>
           </div>
         </div>
       </div>
