--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -16,17 +16,24 @@
         <div class=" lg:col-span-3 w-full flex flex-row flex-wrap content-start">
           <div class="bg-[#2C2C37] flex-[0_0_100%] h-[10%] border-bottom-board"></div>
 
-          <div data-carousel="main" class="bg-[#21212C] flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
-            <div class="p-5 gap-5 overflow-hidden flex flex-row flex-nowrap h-full flex-[0_0_100%]">
+          <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
+            <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
+              <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
+              <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
+              <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
+              <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
+              <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="new-column" class="flex-[0_0_55%] bg-[#2C2C37] cursor-pointer bg-opacity-70 hover:bg-opacity-100 h-full"></div>
             </div>
           </div>
-          
+
         </div>
 
       </div>
 
     </div>
+
+    <script type="module" src="./src/js/CarouselComponent.js"></script>
   </body>
 </html>
