carousel api export

--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -17,7 +17,8 @@
           <div class="bg-[#2C2C37] flex-[0_0_100%] h-[10%] border-bottom-board"></div>
 
           <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
-            <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
+            <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%] relative">
+              <p class="absolute w-[30px] h-[30px] bg-red-500 rounded-full"></p>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
@@ -34,6 +35,6 @@
 
     </div>
 
-    <script type="module" src="./src/js/CarouselComponent.js"></script>
+    <script type="module" src="./src/js/BoardMain.js"></script>
   </body>
 </html>
