prev & next buttons

--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -14,11 +14,13 @@
         <div class="bg-[#2C2C37] w-full h-full border-right-board"></div>
 
         <div class=" lg:col-span-3 w-full flex flex-row flex-wrap content-start">
-          <div class="bg-[#2C2C37] flex-[0_0_100%] h-[10%] border-bottom-board"></div>
+          <div class="bg-[#2C2C37] flex-[0_0_100%] h-[10%] border-bottom-board relative"></div>
+          <p data-carousel="prev-btn" class="zindex-999 cursor-pointer p-4 absolute bg-red-500 rounded-full -translate-x-[50%] -translate-y-[50%] top-[50%] left-[30%]"></p>
+          <p data-carousel="next-btn" class="zindex-999 cursor-pointer p-4 absolute bg-red-500 rounded-full -translate-x-[50%] -translate-y-[50%] top-[50%] left-[95%]"></p>
+
 
           <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
-            <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%] relative">
-              <p class="absolute w-[30px] h-[30px] bg-red-500 rounded-full"></p>
+            <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
               <div data-column="column" class="flex-[0_0_55%] h-full bg-red-50"></div>
