height column js fix

--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -27,7 +27,7 @@
           <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
             <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
 
-              <div data-column="column" class="flex-[0_0_55%] max-h-[90%] grid grid-cols-1 content-start justify-start gap-3 overflow-y-scroll">
+              <div data-column="column" class="flex-[0_0_55%] h-[300px] grid grid-cols-1 content-start justify-start gap-3 overflow-y-scroll">
                 <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
                   Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
                 </div>
@@ -60,7 +60,9 @@
                 </div>
               </div>
 
-              <div data-column="new-column" class="flex-[0_0_55%] rounded-2xl bg-[#2C2C37] cursor-pointer bg-opacity-70 hover:bg-opacity-100 max-h-[90%]"></div>
+              <div data-column="column" class="flex-[0_0_55%] h-[300px] grid grid-cols-1 content-start justify-start gap-3 overflow-y-scroll"></div>
+  
+              <div data-column="new-column" class="flex-[0_0_55%] rounded-2xl bg-[#2C2C37] cursor-pointer bg-opacity-70 hover:bg-opacity-100 h-full"></div>
             </div>
           </div>
 
