--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -27,42 +27,80 @@
           <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
             <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
 
-              <div data-column="column" class="flex-[0_0_55%] h-[300px] grid grid-cols-1 content-start justify-start gap-3 overflow-y-scroll">
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
-                </div>
-                <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-base font-semibold text-slate-50">
-                  Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3 overflow-hidden">
+                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3">
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
                 </div>
               </div>
 
-              <div data-column="column" class="flex-[0_0_55%] h-[300px] grid grid-cols-1 content-start justify-start gap-3 overflow-y-scroll"></div>
-  
+              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3 overflow-hidden">
+                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3">
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                  <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
+                    Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
+                  </div>
+                </div>
+              </div>
+
+              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3 overflow-hidden"></div>
+              
               <div data-column="new-column" class="flex-[0_0_55%] rounded-2xl bg-[#2C2C37] cursor-pointer bg-opacity-70 hover:bg-opacity-100 h-full"></div>
+            
             </div>
           </div>
 
@@ -73,5 +111,6 @@
     </div>
 
     <script type="module" src="./src/js/BoardMain.js"></script>
+    <script type="module" src="./src/js/CarouselColumnsComponent.js"></script>
   </body>
 </html>
