--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -24,11 +24,11 @@
           </svg>
 
 
-          <div data-carousel="main" class="bg-[#21212C] overflow-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
+          <div data-carousel="main" class="bg-[#21212C] overflow-x-scroll overflow-y-hidden flex-[0_0_100%] h-[90%] flex flex-row flex-nowrap">
             <div class="p-5 gap-5 flex flex-row flex-nowrap h-full flex-[0_0_100%]">
 
-              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3 overflow-hidden">
-                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3">
+              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3">
+                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3 overflow-y-scroll">
                   <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
                     Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
                   </div>
@@ -62,8 +62,8 @@
                 </div>
               </div>
 
-              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3 overflow-hidden">
-                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3">
+              <div data-column="column" class="flex-[0_0_55%] h-[400px] grid grid-cols-1 content-start justify-start gap-3">
+                <div data-column="sub-column" class="w-full grid grid-cols-1 h-[400px] content-start justify-start gap-3 overflow-y-scroll">
                   <div class="w-full p-3 self-start justify-self-center bg-[#2C2C37] rounded-2xl text-sm font-semibold text-slate-50">
                     Build new UI for onboarding flow <br> It should be great! <br> It has to be done soon
                   </div>
