--- a/frontend/app-vite/index.html
+++ b/frontend/app-vite/index.html
@@ -7,32 +7,35 @@
     <link href="./main.css" rel="stylesheet" />
   </head>
   <body>
+
     <div data-layout="main" id="app" class="w-full h-[100dvh] flex flex-row flex-wrap bg-red-400 items-start self-start content-start">
       <section data-layout="left-panel" class="flex-[0_0_20%] h-[100%] bg-[#2C2C37] items-start self-start content-start"></section>
       <section data-layout="right-panel" class="flex-[0_0_80%] h-[100%] bg-[#5c5cb3] flex flex-row flex-wrap items-start self-start content-start">
         <div data-layout="right-panel-top" class="bg-[#2C2C37] flex-[0_0_100%] h-[15%] flex flex-row flex-wrap items-start self-start content-start"></div>
         <div data-layout="right-panel-bottom" class="bg-[#21212C] p-5 flex-[0_0_100%] h-[85%] gap-5 flex flex-row flex-nowrap overflow-y-hidden overflow-x-auto items-start self-start content-start">
           <section data-board="column" class="flex-[0_0_40%] flex flex-row flex-wrap items-start self-start content-start h-[100%] gap-5 overflow-x-hidden overflow-y-auto">
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
           </section>
           <section data-board="column" class="flex-[0_0_40%] flex flex-row flex-wrap items-start self-start content-start h-[100%] gap-5 overflow-x-hidden overflow-y-auto">
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
           </section>
           <section data-board="column" class="flex-[0_0_40%] flex flex-row flex-wrap items-start self-start content-start h-[100%] gap-5 overflow-x-hidden overflow-y-auto">
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
-            <p class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
+            <p data-board="task" class="flex-[0_0_100%] bg-green-50/70 h-[150px]"></p>
           </section>
         </div>
       </section>
     </div>
+
+    <script type="module" src="./src/js/SortableColumns.js"></script>
   </body>
 </html>
